# NetworkProgramming

./: .gitignore  SHTTPD.conf  a.out  lab2  lab2.c  lab3.c  labA.c  log.txt  tmp.c  tmp.cpp
MyWebServer/: CMakeLists.txt  Makefile  buffer.cpp  buffer.h  epoller.cpp  epoller.h  httpconn.cpp  httpconn.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  log.cpp  log.h  main.cpp  sqlconnRAII.cpp  sqlconnRAII.h  threadpool.h  timer.cpp  timer.h  webserver.cpp  webserver.h
MyWebServer/resources/: index.html
